# measles

./: .gitignore  Measles 2025.csv  README.md  measles.py  pyproject.toml  test_measles.py  try.py
data/: Measles 2025.csv  Measles 2025.xlsx
