[project]
name = "measles"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Snider",email = "scottsnider@cogeco.ca"}
]
readme = "README.md"
requires-python = "^3.12"


dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
